--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@astrojs/tailwind": "^0.2.1",
     "@astrojs/vue": "^0.1.3",
     "astro": "^1.0.0-beta.27",
+    "prettier-plugin-astro": "^0.0.12",
     "vue": "^3.2.33"
   },
   "dependencies": {
